--- a/index.html
+++ b/index.html
@@ -166,3 +166,83 @@
   </script>
 </body>
 </html>
+[22:58, 10/21/2025] .: <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Youware App</title>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- React & ReactDOM -->
+  <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+  <!-- Framer Motion UMD -->
+  <script src="https://unpkg.com/framer-motion/dist/framer-motion.umd.js"></script>
+</head>
+<body class="bg-white font-sans text-black">
+  <div id="root"></div>
+
+  <script>
+    const { useState } = React;
+    const { motion } = window.FramerMotion;
+
+    function App() {
+      const [url, setUrl] = useState("");
+      const [status, setStatus] = useState("idle");
+      const [error, setError] = useState(null);
+      const [videoData, setVideoData] = useState(null);
+      const API_ENDPOINT = "https://www.tikwm.com/api/";
+
+      const handleDownload = async (e) => {
+        e.preventDefault();
+        if (!url.trim()) {
+          setError("Paste a TikTok link.");
+          setStatus("error");
+          return;
+        }
+        setStatus("loading");
+        setError(null);
+        setVideoData(null);
+        try {
+          const res = await fetch(${API_ENDPOINT}?url=${encodeURIComponent(url.trim())});
+          if (!res.ok) throw new Error("Failed to fetch video.");
+          const data = await res.json();
+          if (data.code !== 0 || !data.data?.play) throw new Error(data.msg || "Video not found.");
+          setVideoData(data.data);
+          setStatus("success");
+        } catch (err) {
+          setError(err.message || "Unexpected error.");
+          setStatus("error");
+        }
+      };
+
+      const isLoading = status === "loading";
+
+      return React.createElement("div", { className: "min-h-screen flex flex-col items-center justify-center p-6 bg-gradient-to-br from-white via-blue-50 to-white" },
+        React.createElement(motion.h1, { initial: { opacity: 0, y: -20 }, animate: { opacity: 1, y: 0 }, className: "text-4xl font-bold mb-8" }, "Download TikTok Videos"),
+        React.createElement("form", { onSubmit: handleDownload, className: "flex flex-col sm:flex-row gap-2 w-full max-w-xl mb-4" },
+          React.createElement("input", {
+            type: "text",
+            placeholder: "Paste TikTok URL...",
+            value: url,
+            onChange: e => setUrl(e.target.value),
+            className: "flex-1 border px-4 py-2 rounded shadow focus:outline-none focus:ring-2 focus:ring-blue-400"
+          }),
+          React.createElement("button", { type: "submit", className: "bg-blue-600 text-white px-4 py-2 rounded shadow hover:bg-blue-700 transition-colors" },
+            isLoading ? "Processing..." : "Download"
+          )
+        ),
+        status === "error" && error && React.createElement(motion.p, { initial: { opacity: 0 }, animate: { opacity: 1 }, className: "text-red-600 mb-2" }, error),
+        status === "success" && videoData && React.createElement(motion.div, { initial: { opacity: 0 }, animate: { opacity: 1 }, className: "mt-4 p-4 border rounded max-w-xl w-full text-center bg-white/80 shadow-lg" },
+          React.createElement("p", { className: "font-semibold mb-2" }, videoData.title),
+          React.createElement("p", { className: "text-gray-600 mb-2" }, "@" + videoData.author.nickname),
+          React.createElement("a", { href: videoData.play, target: "_blank", className: "text-blue-700 underline font-semibold" }, "Download Now")
+        )
+      );
+    }
+
+    ReactDOM.render(React.createElement(App), document.getElementById("root"));
+  </script>
+</body>
+</html>
